# rules_proto

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD.bazel  CHANGELOG.md  CHANGES.md  DEVELOPMENT.md  MODULE.bazel  Makefile  Makefile.examples  README.md  TODO.md  WORKSPACE  WORKSPACE.bzlmod  _config.yml  aspect.bzl  bazelrc  buf_proto.json  common.bzl  compile.bzl  deps.bzl  go.mod  go.sum  go_deps.bzl  maven_akka_install.json  maven_install.json  maven_scala_install.json  maven_zio_install.json  package.json  plugin.bzl  pnpm-lock.yaml  pnpm-workspace.yaml  proto_compile_info_provider_test.bzl  proto_compile_test.bzl  proto_dependency.bzl  proto_info_provider_test.bzl  proto_language.bzl  proto_language_info_provider_test.bzl  (+14 more)
android/: BUILD.bazel  README.md  android_grpc_compile.bzl  android_grpc_library.bzl  android_proto_compile.bzl  android_proto_library.bzl  compile.bzl  defs.bzl  deps.bzl  library.bzl
cc/: BUILD.bazel  cc.bzl  cc_info_provider_test.golden.1.prototext  cc_plugin_info_provider_test.golden.1.prototext  cc_proto_compile.bzl  cc_proto_compile_deps.bzl  cc_proto_compile_info_provider_test.golden.1.prototext
closure/: BUILD.bazel  README.md  buildozer_http_archive.bzl  closure_proto_compile.bzl  closure_proto_library.bzl  compile.bzl  defs.bzl  deps.bzl  library.bzl  rules.bzl
core/: BUILD.bazel  BUILD.tmpl  WORKSPACE.tmpl  bazel_test.go.tmpl  deps.bzl.tmpl  proto_compile.bzl.tmpl  proto_rule.md.tmpl
cpp/: BUILD.bazel  README.md  compile.bzl  cpp_grpc_compile.bzl  cpp_grpc_library.bzl  cpp_proto_compile.bzl  cpp_proto_library.bzl  defs.bzl  deps.bzl  library.bzl  rules.bzl
csharp/: BUILD.bazel  README.md  compile.bzl  csharp_grpc_compile.bzl  csharp_grpc_library.bzl  csharp_proto_compile.bzl  csharp_proto_library.bzl  defs.bzl  deps.bzl  library.bzl  rules.bzl
d/: BUILD.bazel  README.md  com_github_dcarp_protobuf_d.BUILD.bazel  d_proto_compile.bzl  d_proto_library.bzl  defs.bzl  deps.bzl
dart/: BUILD.bazel  README.md  compile.bzl  dart_grpc_compile.bzl  dart_grpc_library.bzl  dart_proto_compile.bzl  dart_proto_library.bzl  dart_protoc_plugin.dart  dart_pub_deps.bzl  defs.bzl  deps.bzl  library.bzl  protoc-gen-dart.go  pubspec-grpc.yaml  pubspec.yaml  rules.bzl  sdk.bzl
docs/: 0_index.md  404.html  API.md  BUILD.bazel  BUILD_RULES.md  DEVELOPMENT.md  GAZELLE.md  Gemfile  HISTORY.md  MODULE_EXTENSIONS.md  PLUGINS.md  README.md  RULES.md  STARLARK.md  TOOLCHAINS.md  _config.yml  builtins.md  cc.md  cc_grpc_compile.md  cc_grpc_library.md  cc_proto_compile.md  cc_proto_library.md  closure.md  closure_proto_compile.md  closure_proto_library.md  closurejs.md  commonjs.md  configuration.md  cpp.md  csharp.md  examples.md  go.md  go_grpc.md  goembed.md  gogo.md  gomerge.md  grpc_gateway.md  grpc_js.md  grpc_js_grpc_compile.md  grpc_js_grpc_library.md  (+28 more)
example/: BUILD.bazel  Makefile.mk  README.md  config.yaml  thing.proto
go/: BUILD.bazel  README.md  compile.bzl  defs.bzl  deps.bzl  go_grpc_compile.bzl  go_grpc_library.bzl  go_proto_compile.bzl  go_proto_library.bzl  library.bzl  rules.bzl  utils.bzl
java/: BUILD.bazel  README.md  compile.bzl  defs.bzl  deps.bzl  java_grpc_compile.bzl  java_grpc_library.bzl  java_proto_compile.bzl  java_proto_library.bzl  javadoc_library.bzl  library.bzl  rules.bzl
node/: BUILD.bazel  README.md  compile.bzl  deps.bzl  library.bzl  node_grpc_compile.bzl  node_grpc_library.bzl  node_module_index.bzl  node_proto_compile.bzl  node_proto_library.bzl  rules.bzl
objc/: BUILD.bazel  README.md  compile.bzl  defs.bzl  deps.bzl  objc_grpc_compile.bzl  objc_grpc_library.bzl  objc_proto_compile.bzl  objc_proto_library.bzl  rules.bzl
php/: BUILD.bazel  README.md  compile.bzl  defs.bzl  deps.bzl  php_grpc_compile.bzl  php_proto_compile.bzl  rules.bzl
pkg/: BUILD.bazel
plugin/: BUILD.bazel
plugins/: BUILD.bazel
protobuf/: BUILD.bazel  WORKSPACE.tmpl  deps.bzl  protoc_debug_wrapper.sh  test.go.tmpl  toolchains.bzl
protoc/: BUILD.bazel
python/: BUILD.bazel  README.md  compile.bzl  defs.bzl  deps.bzl  grpc_library.bzl  library.bzl  py_proto_compile.bzl  py_proto_compile_deps.bzl  py_proto_compile_info_provider_test.golden.1.prototext  py_proto_compile_provider_test.golden.1.prototext  py_proto_library.bzl  python.bzl  python_grpc_aspect_compile.bzl  python_grpc_compile.bzl  python_grpc_library.bzl  python_grpclib_compile.bzl  python_grpclib_library.bzl  python_info_provider_test.golden.1.prototext  python_plugin_provider_test.golden.1.prototext  python_proto_aspect_compile.bzl  python_proto_compile.bzl  python_proto_library.bzl  repositories.bzl  requirements.in  requirements.txt  rules.bzl
routeguide/: BUILD.bazel
ruby/: BUILD.bazel  Gemfile  Makefile  README.md  compile.bzl  defs.bzl  deps.bzl  library.bzl  ruby_grpc_aspect_compile.bzl  ruby_grpc_compile.bzl  ruby_grpc_compile_aspect.bzl  ruby_grpc_library.bzl  ruby_proto_aspect_compile.bzl  ruby_proto_compile.bzl  ruby_proto_library.bzl  rules.bzl
rules/: BUILD.bazel  bazel_version_repository.bzl  cc.bzl  cc_grpc_compile.bzl  cc_grpc_compile_deps.bzl  cc_grpc_library.bzl  cc_grpc_library_deps.bzl  cc_proto_compile.bzl  cc_proto_compile_deps.bzl  cc_proto_library.bzl  cc_proto_library_deps.bzl  closure.bzl  closure_proto_compile.bzl  closure_proto_compile_deps.bzl  closure_proto_library.bzl  closure_proto_library_deps.bzl  combo_proto_compile.bzl  combo_proto_compile_deps.bzl  depsgen.bzl  example.bzl  fileset.bzl  go_grpc_library.bzl  go_proto_library.bzl  gogo.bzl  gogo_proto_compile.bzl  gogo_proto_compile_deps.bzl  gogofast_proto_compile.bzl  gogofast_proto_compile_deps.bzl  gogofaster_proto_compile.bzl  gogofaster_proto_compile_deps.bzl  gogoslick_proto_compile.bzl  gogoslick_proto_compile_deps.bzl  gogotypes_proto_compile.bzl  gogotypes_proto_compile_deps.bzl  golden_filegroup.bzl  gostring_proto_compile.bzl  gostring_proto_compile_deps.bzl  grpc_js.bzl  grpc_js_grpc_compile.bzl  grpc_js_grpc_compile_deps.bzl  (+49 more)
rust/: BUILD  BUILD.bazel  README.md  compile.bzl  defs.bzl  deps.bzl  library.bzl  rust_grpc_compile.bzl  (+4 more)
(+2358 files in other folders)
