load("@build_stack_rules_proto//rules:proto_gazelle.bzl", "proto_gazelle")
load("@bazel_gazelle//:def.bzl", "gazelle_binary")
load("@npm_ts_proto//:defs.bzl", "npm_link_all_packages")

exports_files([
    "rules_proto_config.yaml",
    "MODULE.bazel",
])

# ----------------------------------------------------
# Gazelle
# ----------------------------------------------------
# gazelle:prefix github.com/stackb/rules_proto
# gazelle:exclude vendor
# gazelle:exclude node_modules

gazelle_binary(
    name = "gazelle-protobuf",
    languages = [
        # NOTE: order matters here.  Gazelle will respect the ordering of
        # languages which will impact the population of 'OtherGen', so
        # //language/protobuf MUST come after language/proto.
        "@bazel_gazelle//language/go",
        "@bazel_gazelle//language/proto",
        "//language/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_gazelle(
    name = "gazelle",
    cfgs = ["//:rules_proto_config.yaml"],
    external = "static",
    gazelle = "//:gazelle-protobuf",
    imports = [
        "@googleapis//:imports.csv",
        "@protobufapis//:imports.csv",
    ],
)

# ----------------------------------------------------
# Test-Related
# ----------------------------------------------------

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "go.mod",
        "go.sum",
        "maven_akka_install.json",
        "maven_install.json",
        "maven_zio_install.json",
        "package.json",
        "rules_jvm_external~~maven~maven_scala_install.json",
        "//cmd/gazelle:all_files",
        "//cmd/gencopy:all_files",
        "//extensions:all_files",
        "//language/proto_go_modules:all_files",
        "//language/protobuf:all_files",
        "//pkg:all_files",
        "//plugin:all_files",
        "//rules:all_files",
        "//third_party:all_files",
        "//toolchain:all_files",
    ] + glob(["vendor/**/*"]),
    visibility = ["//visibility:public"],
)

npm_link_all_packages(
    name = "node_modules",
)
